--- a/src/scss/components/_hero.scss
+++ b/src/scss/components/_hero.scss
@@ -2,7 +2,7 @@
   position: relative;
   padding: 300px 0 150px;
   background-position: center center;
-  background-attachment: fixed;
+  // background-attachment: fixed;
   background-repeat: no-repeat; 
   background-size: cover;
   -webkit-background-size: cover;
@@ -19,6 +19,10 @@
 
   @include tablet {
     padding: 180px 0 100px;
+  }
+
+  @include exceptMobile {
+    background-attachment: fixed;
   }
 
   @include mobile {
